# typst-project

./: Cargo.toml  README.md
src/: heuristics.rs  lib.rs  manifest.rs  utils.rs
src/manifest/: author.rs  categories.rs  disciplines.rs  ident.rs  license.rs  package.rs  template.rs  tool.rs  website.rs
src/manifest/author/: github_handle.rs
src/manifest/package/: categories.rs  disciplines.rs
