[package]
name = "typst-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
email_address = "0.2.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
spdx = "0.10.4"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8"
toml_edit = "0.22.9"
unicode-ident = "1.0.12"
unscanny = "0.1.0"

[features]
default = [
  "heuristics-all",
]

heuristics-typstfmt = []
heuristics-typst-test = []
heuristics-all = [
  "heuristics-typstfmt",
  "heuristics-typst-test",
]
